ActVO가 의미 없다고 판단하여 제거